--- a/css/navBar.css
+++ b/css/navBar.css
@@ -15,6 +15,9 @@
 	display: block;
 	float: left;
 }
+.nav img {
+  height: 50px;
+}
 .nav > li > a {
 	position: relative;
 	display: block;
@@ -32,10 +35,10 @@
 	border-right: 1px solid #312a27;
 	
 	-webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    -o-transition: all .3s ease;
-    -ms-transition: all .3s ease;
-    transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  transition: all .3s ease;
 }
 
 .nav > li:hover > a { background: #4b4441; }
