--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -32,3 +32,7 @@ table.tableTutorialCategories td{
 input:focus,textarea:focus {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+input.dashboardAction {
+  width: 100%;
+  height: 23px;
+}
