really large update

--- a/css/general.css
+++ b/css/general.css
@@ -8,7 +8,7 @@ http://www.jankoatwarpspeed.com/css-message-boxes-for-different-message-types/
 }
 html, body {
   overflow-y: auto;
-  min-height: 100%;
+  height: 100%;
 }
 hr {
   margin: 15px;
@@ -18,7 +18,6 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 body {
-  overflow: auto;
   min-height: 100%;
   font: 15px Helvetica, Sans-Serif;
   background-repeat: no-repeat;
@@ -47,6 +46,9 @@ div.content pre {
   white-space: pre-wrap;
   padding-right: 20px;
 }
+div.content section {
+  margin-bottom: 10px;
+}
 div.content li {
   list-style: none;
 }
@@ -58,9 +60,6 @@ div.content a:hover {
 }
 div.content a:visited {
   color: blue;
-}
-div.content p {
-  margin: 10px 0px;
 }
 
 /* Messages */
