--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,6 +1,6 @@
 table.tableTutorial {
     margin: auto;
-    width: 80%;
+    max-width: 840px;
     border-collapse: collapse;
     background-color: white;
 }
@@ -24,7 +24,7 @@ table.tableTutorialCategories {
 table.tableTutorialCategories td{
     border: none;
 }
-#selectTutorial {
+#selectTutorial, #selectCategory {
     display: block;
 	margin: 10px;
 	padding: 5px;
@@ -33,6 +33,22 @@ input:focus,textarea:focus {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 input.dashboardAction {
+  display: block;
+}
+td input.dashboardAction {
   width: 100%;
   height: 23px;
+}
+
+#editor {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+#editorPage {
+  position: relative;
+  min-width: 100%;
+  min-height: 100px;
 }
